--- a/Components/Recipe/RecipeForm.razor.css
+++ b/Components/Recipe/RecipeForm.razor.css
@@ -1,5 +1,5 @@
 .ingredient-list {
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: none;
     margin: 0;
     max-height: 250px;
